force-app/main/default/objects/MUSW__Application_Template__c/MUSW__Application_Template__c.object-meta.xml
<CustomObject>
    <label>Application Template</label>
    <nameField>
        <label>Application Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>