force-app/main/default/objects/MUSW__Application_Template__c/fields/MUSW__Creation_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Creation_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creation Mapping</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipLabel>Application Templates (Creation Mapping)</relationshipLabel>
    <relationshipName>Application_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>