force-app/main/default/objects/MUSW__Application_Template__c/fields/MUSW__License_Class__c.field-meta.xml
<CustomField>
    <fullName>MUSW__License_Class__c</fullName>
    <label>License Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__License_Classes</valueSetName>
    </valueSet>
</CustomField>