force-app/main/default/objects/MUSW__Application_Template__c/fields/MUSW__Target_Object_Creation_Template__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Target_Object_Creation_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Object Creation Template</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipLabel>Application Templates (Target Object Creation Template)</relationshipLabel>
    <relationshipName>Application_Templates_Target_Template</relationshipName>
    <type>Lookup</type>
</CustomField>