force-app/main/default/objects/MUSW__Application_Template__c/recordTypes/MUSW__Land_Use_Application.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Land_Use_Application</fullName>
    <active>true</active>
    <label>Land Use Application</label>
</RecordType>