force-app/main/default/objects/MUSW__Application_Template__c/recordTypes/MUSW__License_Application.recordType-meta.xml
<RecordType>
    <fullName>MUSW__License_Application</fullName>
    <active>true</active>
    <label>License Application</label>
</RecordType>