force-app/main/default/objects/MUSW__Application_Template__c/recordTypes/MUSW__Permit_Application.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Permit_Application</fullName>
    <active>true</active>
    <label>Permit Application</label>
</RecordType>