force-app/main/default/objects/MUSW__Application_Template__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Object_Type__c</columns>
    <columns>MUSW__Object_Record_Type__c</columns>
    <columns>MUSW__Application_Type__c</columns>
    <columns>MUSW__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>